test/sema/typeck/impl/variadic-method-mismatch.out
error: impl method does not match definition in trait.
--> variadic-method-mismatch.dora:8:5
 | 
 | impl Foo for Bar {
 |     fn f(_values: Int32) {}
       ~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
