test/sema/typeck/impl/variadic-method-mismatch.dora
trait Foo {
    fn f(values: Int32...);
}

struct Bar

impl Foo for Bar {
    fn f(_values: Int32) {}
}
